1-add CDP for chrome on grid\n2- add otel for browser side data